--- a/about.html
+++ b/about.html
@@ -43,7 +43,9 @@
       </div>
     </div>
 
-
+<footer class="footer bg-dark text-white py-4 pb-2 mt-0 pt-0">
+      <p class="text-center fs-6 mb-0 text-secondary">Paula Krznarić / Digital Fiction / 21 May 2024</p>
+</footer>
 
 
 
